Task7/gatekeeper/constraint-templates/runasnonroot.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spsprunasnonroot
spec:
  crd:
    spec:
      names:
        kind: K8sPSPRunAsNonRoot
        listKind: K8sPSPRunAsNonRootList
        plural: k8spsprunasnonroot
        singular: k8spsprunasnonroot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spsprunasnonroot

        violation[{"msg": msg}] {
            # Проверяем spec.securityContext.runAsNonRoot на уровне Pod
            not input.review.object.spec.securityContext.runAsNonRoot
            msg := "Pod must set spec.securityContext.runAsNonRoot=true"
        }
